--- a/public/css/style.less
+++ b/public/css/style.less
@@ -21,24 +21,20 @@ section {
   padding-bottom: 30px;
 }
 
-#section1 {
+#section_landing {
   padding: 154px 0 100px;
   min-height: calc(80% - 1px);
 }
 
 @media (min-width: 992px) {
-  #section1 {
+  #section_landing {
       padding: 156px 0 100px;
       min-height: calc(80% - 1px);
   }
 }
 
-#section2, #section4, #section6, #section8 {
+.section-dark {
   background-color: #f0f0f0;
-}
-
-#section3, #section5, #section7 {
-  
 }
 
 
@@ -68,26 +64,7 @@ footer .nav>li>a:hover {
   font-size:24px;
   background-color: #fafafa;
 }
+
 .scroll-top a:link, .scroll-top a:visited {
   color:#777;
 }
-
-.vcenter {
-  display: inline-block;
-  vertical-align: middle;
-  float: none;
-}
-
-.vertical-align {
-  display: flex;
-  align-items: center;
-}
-
-/*@media (min-width:1200px ) {
-  .lg-pad-top {
-      min-height:calc(100% - 1px);
-  }
-}*/
-
-
-
