--- a/views/header.ejs
+++ b/views/header.ejs
@@ -21,11 +21,22 @@
 
             <div class="collapse navbar-collapse" id="nav">
                 <ul class="navbar-nav ml-auto py-3">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section1">Home</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section2">Network</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section3">Exchanges</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section4">Team</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section5">FAQ</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_landing">Home</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_network">Network</a></li>
+                    <!-- <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Exchanges
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="#">Action</a>
+                          <a class="dropdown-item" href="#">Another action</a>
+                          <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                      </li> -->
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_community">Community</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_team">Team</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_faq">FAQ</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="http://blog.trinityfx.org">Blog</a></li>
                 </ul>
             </div>
