--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,49 +1,13 @@
 <% include header %>
 
+<% include section_landing %>
 
-<% include section1 %>
+<% include section_network %>
 
+<% include section_community %>
 
-<section id="section2">
-  <div class="container">
-      <div class="row">
-          <div class="col-sm-8 col-md-12 text-center">
-              <h1>Section</h1>
-          </div>
-      </div>
-  </div>
-</section>
+<% include section_team %>
 
-<section id="section3">
-  <div class="container">
-      <div class="row">
-          <div class="col-sm-8 col-md-12 text-center">
-              <h1>Section</h1>
-          </div>
-      </div>
-  </div>
-</section>
-
-
-<section id="section4">
-  <div class="container">
-      <div class="row">
-          <div class="col-sm-8 col-md-12 text-center">
-              <h1>Section</h1>
-          </div>
-      </div>
-  </div>
-</section>
-
-
-<section id="section5">
-  <div class="container">
-      <div class="row">
-          <div class="col-sm-8 col-md-12 text-center">
-              <h1>Section</h1>
-          </div>
-      </div>
-  </div>
-</section>
+<% include section_faq %>
 
 <% include footer %>
