--- a/views/header.ejs
+++ b/views/header.ejs
@@ -37,7 +37,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_community">Community</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_team">Team</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_faq">FAQ</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="http://blog.trinityfx.org">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://medium.com/trinityfx">Blog</a></li>
                 </ul>
             </div>
         </div>
