replaced discord for blog (for now)

--- a/views/section_community.ejs
+++ b/views/section_community.ejs
@@ -20,11 +20,11 @@
                             </div>
                             <div class="card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Discord/Slack/TBD</h5>
-                                    <p class="card-text">.</p>
+                                    <h5 class="card-title">Blog</h5>
+                                    <p class="card-text">Read about the latest developments</p>
                                 </div>
                                 <div class="card-footer">
-                                    <small class="text-muted">Link: <a href="#">TBD</a></small>
+                                    <small class="text-muted">Link: <a href="https://medium.com/trinityfx">medium.com/trinityfx</a></small>
                                 </div>
                             </div>
                             <div class="card">
