changed twitter link to be url

--- a/views/section_community.ejs
+++ b/views/section_community.ejs
@@ -15,7 +15,7 @@
 
                                 </div>
                                 <div class="card-footer">
-                                    <small class="text-muted">Link: <a href="https://twitter.com/trinityfxorg">@TrinityFxOrg</a></small>
+                                    <small class="text-muted">Link: <a href="https://twitter.com/trinityfxorg">twitter.com/trinityfxorg</a></small>
                                 </div>
                             </div>
                             <div class="card">
