minor UI updates

--- a/views/section_landing.ejs
+++ b/views/section_landing.ejs
@@ -1,15 +1,15 @@
 <section id="section_landing" class="padding-bottom-0">
   <div class="col-sm-8 col-md-12 text-center vcenter">
-    <h2>Sustainable Smart Contracts</h2>
+    
+    <img src="/img/trinity.jpg" />
+    <h1 class="display-3">Trinity</h1>
     <div class="container">
-      <div class="row">
-        <div class="col"></div>
+      <div class="row mt-5">
+        <div class="col-md-2"></div>
         <div class="col">
-          <a href="http://stats.trinityfx.org/">Network Stats</a>
-          <a href="http://explorer.trinityfx.org/home">Explorer</a>
-          <a href="https://github.com/trinityfx">Github</a>
+          <h4>Blockchain + Smart Contracts + Oracles</h4>
         </div>
-        <div class="col"></div>
+        <div class="col-md-2"></div>
       </div>
     </div>
   </div>  
