--- a/views/section_team.ejs
+++ b/views/section_team.ejs
@@ -1,9 +1,46 @@
 <section id="section_team" class="section-dark">
     <div class="container">
-        <div class="row">
+        <div class="row mb-5">
             <div class="col-sm-8 col-md-12 text-center">
                 <h1>Team</h1>
             </div>
         </div>
+        <div class="row">
+            <div class="card-deck">
+                <div class="card">
+                    <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Eric Polerecky</h5>
+                        <p class="card-text">Technologist.</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="http://twitter.com/detroitpro"><i class="fa fa-2x fa-twitter"></i></a>
+                        <a href="http://github.com/detroitpro"><i class="fa fa-2x fa-github"></i></a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">You!</h5>
+                        <p class="card-text">Developer, Designer, Marketing</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href=""><i class="fa fa-2x fa-twitter"></i></a>
+                        <a href=""><i class="fa fa-2x fa-github"></i></a>
+                    </div>
+                </div>
+                <!-- <div class="card">
+                    <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Developer.</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href=""><i class="fa fa-2x fa-twitter"></i></a>
+                        <a href=""><i class="fa fa-2x fa-github"></i></a>
+                    </div>
+                </div> -->
+            </div>
+        </div>
     </div>
-  </section>
+</section>
