--- a/views/header.ejs
+++ b/views/header.ejs
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="nav">
                 <ul class="navbar-nav ml-auto py-3">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_landing">Home</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_network">Network</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_about">About</a></li>
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Exchanges
@@ -37,7 +37,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_community">Community</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_team">Team</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_faq">FAQ</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://medium.com/trinityfx">Blog</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://medium.com/trinityfx">Blog</a></li> -->
                 </ul>
             </div>
         </div>
