--- a/views/section_faq.ejs
+++ b/views/section_faq.ejs
@@ -1,6 +1,6 @@
 <section id="section_faq">
     <div class="container">
-        <div class="row">
+        <div class="row mb-5">
             <div class="col-sm-8 col-md-12 text-center">
                 <h1>FAQ</h1>
             </div>
