--- a/public/css/style.less
+++ b/public/css/style.less
@@ -26,6 +26,14 @@ section {
   min-height: calc(80% - 1px);
 }
 
+#section_resources {
+  min-height: calc(40% - 1px);
+}
+
+#section_community {
+  min-height: calc(35% - 1px);
+}
+
 @media (min-width: 992px) {
   #section_landing {
       padding: 156px 0 100px;
