--- a/views/header.ejs
+++ b/views/header.ejs
@@ -40,6 +40,7 @@
                 <ul class="navbar-nav ml-auto py-3">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_landing">Home</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_resources">Resources</a></li>
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Exchanges
@@ -53,7 +54,6 @@
                       </li> -->
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_community">Community</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_team">Team</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#section_faq">FAQ</a></li>
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://medium.com/trinityfx">Blog</a></li> -->
                 </ul>
             </div>
