--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,10 @@
 
 <% include section_about %>
 
+<% include section_resources %>
+
 <% include section_community %>
 
 <% include section_team %>
-
-<% include section_faq %>
 
 <% include footer %>
