--- a/views/section_about.ejs
+++ b/views/section_about.ejs
@@ -8,25 +8,98 @@
         <div class="row mb-5">
             <div class="card-deck">
                 <div class="card">
+                    <div class="card-header">
+                        <i class="fa fa-2x fa-commenting-o"></i>
+                    </div>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This
-                            content is a little bit longer.</p>
+                        <h5 class="card-title">Hello, World.</h5>
+                        <p class="card-text">Trinity is a network & team, it is not an Ethererum token, there is no ICO.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">
+                            <a href="https://github.com/trinityfx/trinity/wiki">Learn More</a>
+                        </small>
                     </div>
                 </div>
                 <div class="card">
+                    <div class="card-header">
+                        <i class="fa fa-2x fa-group"></i>
+                    </div>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        <h5 class="card-title">Decentralized Oracles</h5>
+                        <p class="card-text">Next generation smart contracts powered by real-world data feeds.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">
+                            <a href="https://github.com/trinityfx/trinity/wiki/Decentralized-Oracles">Learn More</a>
+                        </small>
                     </div>
                 </div>
                 <div class="card">
+                    <div class="card-header">
+                        <i class="fa fa-2x fa-database"></i>
+                    </div>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This
-                            card has even longer content than the first to show that equal height action.</p>
+                        <h5 class="card-title">Experience</h5>
+                        <p class="card-text">The Trinity Fund is focused design, marketing and efforts that increase consumer adoption.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">
+                            <a href="https://github.com/trinityfx/trinity/wiki/Experience">Learn More</a>
+                        </small>
                     </div>
                 </div>
+
+
+            </div>
+        </div>
+        <div class="row mb-5">
+            <div class="card-deck">
+                <div class="card">
+                    <div class="card-header">
+                        <i class="fa fa-2x fa-cube"></i>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Ethereum Compatability</h5>
+                        <p class="card-text">Born from the Ethereum codebase and retunely integrating the latest Ethereum enhancements; Whats
+                            good for Trinity is good for Ethereum.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">
+                            <a href="https://github.com/trinityfx/trinity/wiki/Compatability">Learn More</a>
+                        </small>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <i class="fa fa-2x fa-refresh"></i>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Sustainable Governance</h5>
+                        <p class="card-text">The Trinity network has a built in method for self preservation and growth.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">
+                            <a href="https://github.com/trinityfx/trinity/wiki/Governance">Learn More</a>
+                        </small>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <i class="fa fa-2x fa-cogs"></i>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Scalability Enhancements</h5>
+                        <p class="card-text">State Channels, Atomic Swaps and Relay Chains.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">
+                            <a href="https://github.com/trinityfx/trinity/wiki/Scalability">Learn More</a>
+                        </small>
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </div>
