--- a/views/section_community.ejs
+++ b/views/section_community.ejs
@@ -1,4 +1,4 @@
-<section id="section_community">
+<section id="section_community" class="section-dark">
     <div class="container">
         <div class="row mb-5">
             <div class="col-sm-8 col-md-12 text-center">
@@ -6,41 +6,24 @@
             </div>
         </div>
         <div class="row">
-            <div class="card-deck">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Twitter</h5>
-                        <p class="card-text">Follow the conversation with the hash tag #TrinityFx.
-                            <a href="https://twitter.com/trinityfxorg">@TrinityFxOrg</a>
-                        </p>
-
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Link: <a href="https://twitter.com/trinityfxorg">twitter.com/trinityfxorg</a></small>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Blog</h5>
-                        <p class="card-text">Read about the latest developments</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Link: <a href="https://medium.com/trinityfx">medium.com/trinityfx</a></small>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Github</h5>
-                        <p class="card-text">A key aspect of what makes Trinity a sustainable platform is the long term governance
-                            model for continued software development.
-                            <br /> Learn more about the development community from our
-                            <a href="https://github.com/trinityfx">public Github repository</a>
-                        </p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Link: <a href="https://github.com/trinityfx">github.com/trinityfx</a></small>
-                    </div>
-                </div>
+            <div class="col">
+                <ul class="nav justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="https://twitter.com/trinityfxorg">
+                            <i class="fa fa-3x fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://medium.com/trinityfx">
+                            <i class="fa fa-3x fa-medium"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/trinityfx">
+                            <i class="fa fa-3x fa-github"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
