--- a/views/section_team.ejs
+++ b/views/section_team.ejs
@@ -1,4 +1,4 @@
-<section id="section_team" class="section-dark">
+<section id="section_team">
     <div class="container">
         <div class="row mb-5">
             <div class="col-sm-8 col-md-12 text-center">
