--- a/views/section_team.ejs
+++ b/views/section_team.ejs
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="card-deck">
                 <div class="card">
-                    <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
+                    <img class="card-img-top" src="https://via.placeholder.com/350x150" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Eric Polerecky</h5>
                         <p class="card-text">Technologist.</p>
@@ -19,7 +19,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
+                    <img class="card-img-top" src="https://via.placeholder.com/350x150" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">You!</h5>
                         <p class="card-text">Developer, Designer, Marketing</p>
