updated link to wallet

--- a/views/section_resources.ejs
+++ b/views/section_resources.ejs
@@ -12,6 +12,11 @@
                         Wallets
                     </div>
                     <ul class="list-group list-group-flush">
+                        <li class="list-group-item">
+                            <a href="https://wallet.trinityfx.org">Offical Wallet - Web
+                                <i class="fa fa-folder pull-right"></i>
+                            </a>
+                        </li>
                         <li class="list-group-item">Offical Wallet - Windows
                             <i class="fa fa-windows pull-right"></i>
                         </li>
@@ -21,9 +26,7 @@
                         <li class="list-group-item">Offical Wallet - Linux
                             <i class="fa fa-linux pull-right"></i>
                         </li>
-                        <li class="list-group-item">Offical Wallet - Web
-                            <i class="fa fa-folder pull-right"></i>
-                        </li>
+
                     </ul>
                 </div>
 
@@ -39,7 +42,7 @@
                             <i class="fa fa-user-plus pull-right"></i>
                         </li>
                         <li class="list-group-item">
-                            <a href="http://stats.trinityfx.org">Network Stats
+                            <a href="https://stats.trinityfx.org">Network Stats
                                 <i class="fa fa-signal  pull-right"></i>
                             </a>
                         </li>
@@ -52,7 +55,7 @@
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
-                            <a href="http://explorer.trinityfx.org">
+                            <a href="https://explorer.trinityfx.org">
                                 Offical Block Explorer
                                 <i class="fa fa-binoculars pull-right"></i>
                             </a>
