--- a/views/section_team.ejs
+++ b/views/section_team.ejs
@@ -8,38 +8,50 @@
         <div class="row">
             <div class="card-deck">
                 <div class="card">
-                    <img class="card-img-top" src="https://via.placeholder.com/350x150" alt="Card image cap">
+                    <img class="card-img-top" src="img/eric.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Eric Polerecky</h5>
-                        <p class="card-text">Technologist.</p>
+                        <p class="card-text">Technologist</p>
                     </div>
                     <div class="card-footer">
                         <a href="http://twitter.com/detroitpro"><i class="fa fa-2x fa-twitter"></i></a>
                         <a href="http://github.com/detroitpro"><i class="fa fa-2x fa-github"></i></a>
+                        <a href="http://eric.polerecky.com/"><i class="fa fa-2x fa-globe"></i></a>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="https://via.placeholder.com/350x150" alt="Card image cap">
+                    <img class="card-img-top" src="img/ian.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">You!</h5>
-                        <p class="card-text">Developer, Designer, Marketing</p>
+                        <h5 class="card-title">Ian DesJardins</h5>
+                        <p class="card-text">Developer</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://twitter.com/codenbrew"><i class="fa fa-2x fa-twitter"></i></a>
+                        <a href="https://github.com/iandesj"><i class="fa fa-2x fa-github"></i></a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="img/gun.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Gunveer Natt</h5>
+                        <p class="card-text">Mobile Developer</p>
                     </div>
                     <div class="card-footer">
                         <a href=""><i class="fa fa-2x fa-twitter"></i></a>
                         <a href=""><i class="fa fa-2x fa-github"></i></a>
                     </div>
                 </div>
-                <!-- <div class="card">
-                    <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
+                <div class="card">
+                    <img class="card-img-top" src="img/meg.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Developer.</p>
+                        <h5 class="card-title">Megan Mayle</h5>
+                        <p class="card-text">Community Manager</p>
                     </div>
                     <div class="card-footer">
-                        <a href=""><i class="fa fa-2x fa-twitter"></i></a>
-                        <a href=""><i class="fa fa-2x fa-github"></i></a>
+                        <a href="https://twitter.com/missmeg703"><i class="fa fa-2x fa-twitter"></i></a>
+                        <a href="https://meganmayle.com/"><i class="fa fa-2x fa-globe"></i></a>                        
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
     </div>
