remove href for gun

--- a/views/section_team.ejs
+++ b/views/section_team.ejs
@@ -37,8 +37,8 @@
                         <p class="card-text">Mobile Developer</p>
                     </div>
                     <div class="card-footer">
-                        <a href=""><i class="fa fa-2x fa-twitter"></i></a>
-                        <a href=""><i class="fa fa-2x fa-github"></i></a>
+                        <!-- <a href=""><i class="fa fa-2x fa-twitter"></i></a>
+                        <a href=""><i class="fa fa-2x fa-github"></i></a> -->
                     </div>
                 </div>
                 <div class="card">
