--- a/views/section_team.ejs
+++ b/views/section_team.ejs
@@ -52,6 +52,17 @@
                         <a href="https://meganmayle.com/"><i class="fa fa-2x fa-globe"></i></a>                        
                     </div>
                 </div>
+                <div class="card">
+                    <img class="card-img-top" src="img/andrew.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Andrew Haine</h5>
+                        <p class="card-text">Designer</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://www.behance.net/ahainen"><i class="fa fa-2x fa-twitter"></i></a>
+                        <a href="http://andrewhainen.com"><i class="fa fa-2x fa-behance"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
