--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,31 +1,78 @@
 <footer id="footer">
     <div class="container">
         <div class="row">
-            <div class="col text-center">
-                <p>Information</p>
-                <ul class="nav">
+            <div class="col">
+                <h4>Information</h4>
+                <ul>
+                    <li>
+                        <a href="https://github.com/trinityfx/trinity/wiki">About</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/trinityfx/trinity/wiki/Decentralized-Oracles">Oracles</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/trinityfx/trinity/wiki/Experience">Experience</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/trinityfx/trinity/wiki/Compatability">Compatability</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/trinityfx/trinity/wiki/Governance">Governance</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/trinityfx/trinity/wiki/Scalability">Scalability</a>
+                    </li>
                 </ul>
             </div>
-            <div class="col text-center">
-                <p>Follow Us</p>
-                <ul class="nav">
+            <div class="col">
+                <h4>Follow Us</h4>
+                <ul>
+                        <li>
+                                <a href="http://github.com/trintiyfx">
+                                    <i class="fa fa-github"></i> - GitHub</a>
+                            </li>
+                    <li>
+                        <a href="http://twitter.com/trinityfxorg">
+                            <i class="fa fa-twitter"></i> - Twitter</a>
+                    </li>
                 </ul>
             </div>
-            <div class="col text-center">
-                <p>Footer Us</p>
-                <ul class="nav">
+            <div class="col">
+                <h4>Resources</h4>
+                <ul>
+                    <li>
+                        <a href="https://wallet.trinityfx.org">Web Wallet</a>
+                    </li>
+                    <li>
+                        <a href="https://explorer.trinityfx.org">Block Explorer</a>
+                    </li>
+                    <li>
+                        <a href="https://stats.trinityfx.org">Stats</a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/trinitytipbot">Twitter Tip Bot</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </div>
 </footer>
 <ul class="nav float-right scroll-top">
-    <li><a href="#section1" title="Scroll to top"><i class="glyphicon glyphicon-chevron-up"></i></a></li>
+    <li>
+        <a href="#section1" title="Scroll to top">
+            <i class="glyphicon glyphicon-chevron-up"></i>
+        </a>
+    </li>
 </ul>
-<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+    crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+    crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
+    crossorigin="anonymous"></script>
 <script src="/js/site.js"></script>
 </body>
+
 </html>
