--- a/views/section_landing.ejs
+++ b/views/section_landing.ejs
@@ -1,8 +1,8 @@
 <section id="section_landing" class="padding-bottom-0">
   <div class="col-sm-8 col-md-12 text-center vcenter">
     
-    <img src="/img/trinity.jpg" />
-    <h1 class="display-3">Trinity</h1>
+    <img src="/img/fire.png" style="height: 300px;" />
+    <h1 class="display-3">Akroma</h1>
     <div class="container">
       <div class="row mt-5">
         <div class="col-md-2"></div>
