minor update to test deployment

--- a/views/section_about.ejs
+++ b/views/section_about.ejs
@@ -13,7 +13,7 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Hello, World.</h5>
-                        <p class="card-text">Trinity is a network & team, it is not an Ethererum token, there is no ICO.</p>
+                        <p class="card-text">Akroma is a network & team, it is not an Ethererum token, there is no ICO.</p>
                     </div>
                     <div class="card-footer">
                         <small class="text-muted">
