deploy test again

--- a/views/section_about.ejs
+++ b/views/section_about.ejs
@@ -41,7 +41,7 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Experience</h5>
-                        <p class="card-text">The Trinity Fund is focused design, marketing and efforts that increase consumer adoption.</p>
+                        <p class="card-text">The Akroma Fund is focused design, marketing and efforts that increase consumer adoption.</p>
                     </div>
                     <div class="card-footer">
                         <small class="text-muted">
@@ -62,7 +62,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Ethereum Compatability</h5>
                         <p class="card-text">Born from the Ethereum codebase and retunely integrating the latest Ethereum enhancements; Whats
-                            good for Trinity is good for Ethereum.</p>
+                            good for Akroma is good for Ethereum.</p>
                     </div>
                     <div class="card-footer">
                         <small class="text-muted">
@@ -76,7 +76,7 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Sustainable Governance</h5>
-                        <p class="card-text">The Trinity network has a built in method for self preservation and growth.</p>
+                        <p class="card-text">The Akroma network has a built in method for self preservation and growth.</p>
                     </div>
                     <div class="card-footer">
                         <small class="text-muted">
