updated links, need to add ssl certs

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -5,22 +5,22 @@
                 <h4>Information</h4>
                 <ul>
                     <li>
-                        <a href="https://github.com/trinityfx/trinity/wiki">About</a>
+                        <a href="https://github.com/akroma-project/akroma/wiki">About</a>
                     </li>
                     <li>
-                        <a href="https://github.com/trinityfx/trinity/wiki/Decentralized-Oracles">Oracles</a>
+                        <a href="https://github.com/akroma-project/akroma/wiki/Decentralized-Oracles">Oracles</a>
                     </li>
                     <li>
-                        <a href="https://github.com/trinityfx/trinity/wiki/Experience">Experience</a>
+                        <a href="https://github.com/akroma-project/akroma/wiki/Experience">Experience</a>
                     </li>
                     <li>
-                        <a href="https://github.com/trinityfx/trinity/wiki/Compatability">Compatability</a>
+                        <a href="https://github.com/akroma-project/akroma/wiki/Compatability">Compatability</a>
                     </li>
                     <li>
-                        <a href="https://github.com/trinityfx/trinity/wiki/Governance">Governance</a>
+                        <a href="https://github.com/akroma-project/akroma/wiki/Governance">Governance</a>
                     </li>
                     <li>
-                        <a href="https://github.com/trinityfx/trinity/wiki/Scalability">Scalability</a>
+                        <a href="https://github.com/akroma-project/akroma/wiki/Scalability">Scalability</a>
                     </li>
                 </ul>
             </div>
@@ -28,11 +28,11 @@
                 <h4>Follow Us</h4>
                 <ul>
                         <li>
-                                <a href="http://github.com/trintiyfx">
+                                <a href="http://github.com/akroma-project">
                                     <i class="fa fa-github"></i> - GitHub</a>
                             </li>
                     <li>
-                        <a href="http://twitter.com/trinityfxorg">
+                        <a href="http://twitter.com/akroma_io">
                             <i class="fa fa-twitter"></i> - Twitter</a>
                     </li>
                 </ul>
@@ -41,16 +41,16 @@
                 <h4>Resources</h4>
                 <ul>
                     <li>
-                        <a href="https://wallet.trinityfx.org">Web Wallet</a>
+                        <a href="https://wallet.akroma.io">Web Wallet</a>
                     </li>
                     <li>
-                        <a href="https://explorer.trinityfx.org">Block Explorer</a>
+                        <a href="https://explorer.akroma.io">Block Explorer</a>
                     </li>
                     <li>
-                        <a href="https://stats.trinityfx.org">Stats</a>
+                        <a href="https://stats.akroma.io">Stats</a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/trinitytipbot">Twitter Tip Bot</a>
+                        <a href="https://twitter.com/akroma_io_tips">Tip Bot</a>
                     </li>
                 </ul>
             </div>
