--- a/views/section_community.ejs
+++ b/views/section_community.ejs
@@ -9,17 +9,17 @@
             <div class="col">
                 <ul class="nav justify-content-center">
                     <li class="nav-item">
-                        <a class="nav-link active" href="https://twitter.com/trinityfxorg">
+                        <a class="nav-link active" href="https://twitter.com/akroma_io">
                             <i class="fa fa-3x fa-twitter"></i>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://medium.com/trinityfx">
+                        <a class="nav-link" href="https://medium.com/">
                             <i class="fa fa-3x fa-medium"></i>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/trinityfx">
+                        <a class="nav-link" href="https://github.com/akroma-project">
                             <i class="fa fa-3x fa-github"></i>
                         </a>
                     </li>
