--- a/views/section_community.ejs
+++ b/views/section_community.ejs
@@ -10,17 +10,23 @@
                 <ul class="nav justify-content-center">
                     <li class="nav-item">
                         <a class="nav-link active" href="https://twitter.com/akroma_io">
-                            <i class="fa fa-3x fa-twitter"></i>
+                            <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/twitter.svg" />
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active" href="https://discord.gg/KWC8wtT">
+                            <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/discord.svg" />
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
                         <a class="nav-link" href="https://medium.com/">
-                            <i class="fa fa-3x fa-medium"></i>
+                            <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/medium.svg" />
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/akroma-project">
-                            <i class="fa fa-3x fa-github"></i>
+                            <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/github.svg" />
                         </a>
                     </li>
                 </ul>
