--- a/views/section_resources.ejs
+++ b/views/section_resources.ejs
@@ -13,7 +13,7 @@
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
-                            <a href="https://wallet.trinityfx.org">Offical Wallet - Web
+                            <a href="https://wallet.akroma.io">Offical Wallet - Web
                                 <i class="fa fa-folder pull-right"></i>
                             </a>
                         </li>
@@ -42,7 +42,7 @@
                             <i class="fa fa-user-plus pull-right"></i>
                         </li>
                         <li class="list-group-item">
-                            <a href="https://stats.trinityfx.org">Network Stats
+                            <a href="https://stats.akroma.io">Network Stats
                                 <i class="fa fa-signal  pull-right"></i>
                             </a>
                         </li>
@@ -55,7 +55,7 @@
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
-                            <a href="https://explorer.trinityfx.org">
+                            <a href="https://explorer.akroma.io">
                                 Offical Block Explorer
                                 <i class="fa fa-binoculars pull-right"></i>
                             </a>
@@ -69,7 +69,7 @@
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
-                            <a href="https://github.com/trinityfx/trinity/wiki/Mining---Solo">
+                            <a href="https://github.com/akroma-project/akroma/wiki/Mining---Solo">
                                 Solo Mining
                             </a>
                         </li>
